Added a route to get a secret key for the document
When a keyHint is provided the route will return a specific key.
Otherwise the route will return a key generated in the last hour,
generating a new key if needed.
